--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -67,7 +67,7 @@
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col m2 s4">
                             <i class="material-icons prefix">mail</i>
-                            <label for="playerMail">{{'civilSection.label.userEMail' | translate }}</label>
+                            <label>{{'civilSection.label.userEMail' | translate }}</label>
                         </div>
                         <div class="input-field col m4 s8">
                             {{signup.contact.email}}                            
@@ -145,10 +145,12 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="col m6 s12">
-                            <div class="col m3" ng-repeat="activity in activities">
-                                <img  src="assets/images/activity/{{activity.code}}.jpg"/><br/>
-                                <input name="signup.activity" class="with-gap" type="radio" id="activity.{{activity._id}}" value="{{activity._id}}" placeholder="{{activity.label | translate }}"
-                                       ng-model="signup.activity" required ng-disabled="{{activity.enable==false}}"/>
+                            <div class="col m3" ng-repeat="activity in activities track by $index">
+                                <img ng-src="assets/images/activity/{{activity.code}}.jpg"/><br/>
+                                <input class="with-gap" type="radio"
+                                       id="activity.{{activity._id}}" value="{{activity._id}}"
+                                       placeholder="{{activity.label | translate }}"
+                                       ng-model="signup.account.listPlan[0].activity._id" required ng-disabled="!activity.enable"/>
                                 <label for="activity.{{activity._id}}">{{activity.label | translate }}</label>
                             </div>
                         </div>
@@ -177,7 +179,7 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col s3">
-                            <label for="userStructure">{{'structureSection.label.userStructureCity' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                            <label>{{'structureSection.label.userStructureCity' | translate }} <span class="red-text text-lighten-1">*</span></label>
                        </div>
                         <div class="input-field col s3">
                             <input type="text" id="userStructureCity" ng-autocomplete ng-model="structureCity" details="signup.detailsStructureCity" placeholder="" ng-change="changeCityName();" ng-blur="resetStructure();" />
@@ -189,7 +191,7 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col s3">
-                            <label for="userStructure">{{'structureSection.label.userStructureName' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                            <label>{{'structureSection.label.userStructureName' | translate }} <span class="red-text text-lighten-1">*</span></label>
                        </div>
                         <div class="input-field col s3">
                             <select name="userStructureSelect" ng-model="structure" id="userStructureSelect" class="browser-default blue-grey-text text-darken-1" ng-focus="loadStructures()"
@@ -235,7 +237,7 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col s1">
-                            <img  src="assets/images/activity/{{signup.activity}}.jpg"/><br/>
+                            <img ng-src="assets/images/activity/{{signup.activity}}.jpg"/><br/>
                        </div>
                         <div class="input-field col s5">
                         	<div ng-repeat="data in structuresResult" ng-show="data._id==structure.referencialId">
