--- a/src/app/components/directives/stats/hand/efficiency.html
+++ b/src/app/components/directives/stats/hand/efficiency.html
@@ -1,10 +1,10 @@
 <!-- efficiency gauge -->
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiencyGlobal'" ng-show="noStat">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiencyGlobal'">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content white center-align">
+    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiencyGlobal" 
                  chart-columns="efficiencyGlobalCol" 
                  chart-data="efficiencyGlobalData"
@@ -15,14 +15,15 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
+    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency9m'" ng-show="noStat">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency9m'">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content white center-align">
+    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiency9m" 
                  chart-columns="efficiency9mCol" 
                  chart-data="efficiency9mData"
@@ -33,14 +34,15 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
+    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency6m'" ng-show="noStat">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency6m'">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content white center-align">
+    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiency6m" 
                  chart-columns="efficiency6mCol" 
                  chart-data="efficiency6mData"
@@ -51,14 +53,15 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
+    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency7m'" ng-show="noStat">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency7m'">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
 
-    <div class="card-content white center-align">
+    <div class="card-content grey lighten-4 center-align" ng-show="noStat">
         <c3chart bindto-id="gaugeEfficiency7m" 
                  chart-columns="efficiency7mCol" 
                  chart-data="efficiency7mData"
@@ -69,4 +72,5 @@
             <chart-gauge min="0" max="100" width="30"/>
         </c3chart>
     </div>
+    <div class="card-content grey lighten-4 center-align red-text text-lighten-2" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
 </div>
