--- a/src/app/modules/sandbox/stats/event/eventStats.html
+++ b/src/app/modules/sandbox/stats/event/eventStats.html
@@ -111,35 +111,11 @@
             <!-- Stats shoot efficiency end -->
             
             <!-- Stats actions pos/neg Start -->
-            <div class="row">    
-                <div class="col l6 s12">
-                    <div class="card blue-grey darken-2">
-                        <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-                            <h5><small>{{'stats.actionTab.defense' | translate }}</small></h5>
-                        </div>
-                        <div class="card-content white">
-                            <c3chart bindto-id="chartActionsDef" chart-columns="defenseCol" chart-data="defenseData" 
-                                     padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
-                                <chart-donut width="40"/>
-                            </c3chart>
-                        </div>
-                    </div>
+            <div class="row">
+                <div class="col s12 center white red-text text-lighten-2">
+                    <h5>{{'stats.actionTab.title' | translate }}</h5>
                 </div>
-
-                <div class="col l6 s12">
-                    <div class="card blue-grey darken-2">
-                        <div class="card-title grey-text text-lighten-4 center">
-                            <h5><small>{{'stats.actionTab.attack' | translate }}</small></h5>
-                        </div>
-                        <div class="card-content white">
-                            <c3chart bindto-id="chartActionsAtt" chart-columns="attackCol" chart-data="attackData" 
-                                     padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
-                                <chart-donut width="40"/>
-                            </c3chart>
-                        </div>
-                    </div>
-                </div>
-                   
+                <stats-actions-pos-neg></stats-actions-pos-neg>
             </div>
             <!-- Stats actions pos/neg End -->
             
