--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -3,12 +3,10 @@
     <!-- space between header menu and body-->
     <div class="row"></div>
     
-<!-- view desktop -->
-    
-    <!-- Resume-->
     <div class="row">
         <div class="col s12">
             
+            <!-- Entete-->
             <div class="row blue-grey darken-2">
                 <div class="col l3 m3 center hide-on-small-only">
                     <avatar person="player" width="'50px'"></avatar>
@@ -61,15 +59,14 @@
             <div class="row"></div>
             
             <!-- Stats shoot efficiency Start -->
-            <div class="row grey lighten-2">
-                <div class="col s12 center blue-grey-text text-darken-2">
-                    <br/>
-                    <h5 style="padding-left:10px">{{'stats.efficiency.efficiency' | translate }}</h5>
+            <div class="row">
+                <div class="col s12 center white red-text text-lighten-2">
+                    <h5>{{'stats.efficiency.efficiency' | translate }}</h5>
                 </div>
                 
                 <div class="col l3 m6 s12">
                     <stats-efficiency bind-to-id="gaugeEfficiencyGlobal" 
-                        label="efficiencyTotal" padding="25">
+                        label="efficiencyTotal" padding="25" noStatEff="noStatEff">
                     </stats-efficiency>
                 </div>
                 
@@ -94,34 +91,11 @@
             <!-- Stats shoot efficiency end -->
             
             <!-- Stats actions pos/neg Start -->
-            <div class="row">    
-                <div class="col l6 s12">
-                    <div class="card blue-grey darken-2">
-                        <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-                            <h5><small>{{'stats.actionTab.defense' | translate }}</small></h5>
-                        </div>
-                        <div class="card-content white">
-                            <c3chart bindto-id="chartActionsDef" chart-columns="defenseCol" chart-data="defenseData" 
-                                     padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
-                                <chart-donut width="40"/>
-                            </c3chart>
-                        </div>
-                    </div>
+            <div class="row"> 
+                <div class="col s12 center white red-text text-lighten-2">
+                    <h5>{{'stats.actionTab.title' | translate }}</h5>
                 </div>
-
-                <div class="col l6 s12">
-                    <div class="card blue-grey darken-2">
-                        <div class="card-title grey-text text-lighten-4 center">
-                            <h5><small>{{'stats.actionTab.attack' | translate }}</small></h5>
-                        </div>
-                        <div class="card-content white">
-                            <c3chart bindto-id="chartActionsAtt" chart-columns="attackCol" chart-data="attackData" 
-                                     padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
-                                <chart-donut width="40"/>
-                            </c3chart>
-                        </div>
-                    </div>
-                </div>  
+                <stats-actions-pos-neg></stats-actions-pos-neg>
             </div>
             <!-- Stats actions pos/neg end -->
         </div>
