--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -10,7 +10,7 @@
         <div class="col s12">
             
             <div class="row blue-grey darken-2">
-                <div class="col l2 m1 s12 white-text center hide-on-small-only">
+                <div class="col l2 m1 white-text center hide-on-small-only">
                     &nbsp;
                 </div>
                 <div class="col l8 m10 s12 white-text center-align">
@@ -51,8 +51,8 @@
             <div class="row"></div>
             
             <!-- Stats shoot efficiency Start -->
-            <div class="row grey lighten-2">
-                <div class="col s12 center blue-grey-text text-darken-2">
+            <div class="row">
+                <div class="col s12 center white red-text text-lighten-2">
                     <br/>
                     <h5 style="padding-left:10px">{{'stats.efficiency.efficiency' | translate }}</h5>
                 </div>
@@ -84,41 +84,18 @@
             <!-- Stats shoot efficiency end -->
             
             <!-- Stats actions pos/neg Start -->
-            <div class="row">    
-                <div class="col l6 s12">
-                    <div class="card blue-grey darken-2">
-                        <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
-                            <h5><small>{{'stats.actionTab.defense' | translate }}</small></h5>
-                        </div>
-                        <div class="card-content white">
-                            <c3chart bindto-id="chartActionsDef" chart-columns="defenseCol" chart-data="defenseData" 
-                                     padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
-                                <chart-donut width="40"/>
-                            </c3chart>
-                        </div>
-                    </div>
+            <div class="row">
+                <div class="col s12 center white red-text text-lighten-2">
+                    <h5>{{'stats.actionTab.title' | translate }}</h5>
                 </div>
-
-                <div class="col l6 s12">
-                    <div class="card blue-grey darken-2">
-                        <div class="card-title grey-text text-lighten-4 center">
-                            <h5><small>{{'stats.actionTab.attack' | translate }}</small></h5>
-                        </div>
-                        <div class="card-content white">
-                            <c3chart bindto-id="chartActionsAtt" chart-columns="attackCol" chart-data="attackData" 
-                                     padding-top="40" padding-bottom="40" padding-right="40" padding-left="40">
-                                <chart-donut width="40"/>
-                            </c3chart>
-                        </div>
-                    </div>
-                </div>
+                <stats-actions-pos-neg></stats-actions-pos-neg>
             </div>
             <!-- Stats actions pos/neg end -->
             
             <!-- Stats participant's list Start -->
-            <div class="row grey lighten-2">
+            <div class="row">
                 <div class="col s12" ng-if="collectes.length > 0">
-                    <div><h5 class="blue-grey-text text-darken-1"><i class="fa fa-bar-chart"></i> {{'stats.teamLabels.listCollect' | translate }}</h5></div>
+                    <div><h5 class="center white red-text text-lighten-2"><i class="fa fa-bar-chart"></i> {{'stats.teamLabels.listCollect' | translate }}</h5></div>
                     <ul>
                         <li class="col s12 m6 l4" ng-repeat="collecte in collectes">
                             <!-- cup -->
