--- a/src/app/index.css
+++ b/src/app/index.css
@@ -30,11 +30,11 @@
 }
 
 .colorAccent-text {
-  color: #ea5350 !important;
+    color: #ea5350 !important;
 }
 
 .colorSecondary-text {
-  color: #78BE78 !important;
+    color: #78BE78 !important;
 }
 
 .colorMain {
@@ -53,10 +53,9 @@
 }
 
 .colorBckgModal {
-    background-color: rgba(242,243,242, 1);
+    background-color: rgba(242, 243, 242, 1);
     overflow: hidden;
 }
-
 
 .cardBckg {
     background: #9e9e9e;
@@ -64,10 +63,10 @@
 }
 
 .btn, .btn-large, .btn-flat {
-    width:45%; 
-    height:40px; 
-    padding: 2px; 
-    max-width:200px;
+    width: 45%;
+    height: 40px;
+    padding: 2px;
+    max-width: 200px;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -83,10 +82,10 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: rgba(120, 190, 120, 1);
+    color: rgba(120, 190, 120, 1);
 }
 
-.switch label input[type=checkbox]:checked + .lever{
+.switch label input[type=checkbox]:checked + .lever {
     background-color: rgba(120, 190, 120, 0.8);
 }
 
@@ -107,8 +106,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #78BE78;
-  box-shadow: 0 1px 0 0 #78BE78;
+    border-bottom: 1px solid #78BE78;
+    box-shadow: 0 1px 0 0 #78BE78;
 }
 
 input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid,
@@ -261,8 +260,6 @@ footer.page-footer {
     height: 90%;
 }
 
-
-
 .hero-overlay {
     background-color: #000000;
     width: 100%;
@@ -350,7 +347,6 @@ footer.page-footer {
 }
 
 @media only screen and (max-width: 992px) {
-    
 
     #index-banner .section {
         top: 0;
@@ -1018,18 +1014,20 @@ table.super-fancy tr.foobar {
         transform: translateY(-5px);
     }
 }
+
 .trial a {
     color: #fff;
     font-weight: bold;
 }
 
 .trial {
-  /*  padding-top: 80px; */
+    /*  padding-top: 80px; */
     position: absolute;
     top: 50px;
     right: 0;
     left: 0;
 }
+
 .nav-padding {
     margin-bottom: 65px;
 }
@@ -1046,4 +1044,41 @@ table.super-fancy tr.foobar {
 .valign-middle .col,
 .valign-middle [class*="col"] + [class*="col"]:last-child {
     float: none;
+}
+
+/** Bandeau CNIL **/
+.cnil {
+    position: relative;
+    width: 100%;
+    min-height: 40px;
+    text-align: center;
+    font-size: 14px;
+    padding: 8px 64px 8px 8px;
+    z-index: 1000;
+}
+
+.cnil-link {
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.cnil-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    padding: 0 24px;
+    cursor: pointer;
+}
+
+.cnil-close-text {
+    position: relative;
+    display: block;
+    top: calc(50% - 13px);
+    font-size: 20px;
+}
+
+.cnil-main p {
+    text-align: justify;
 }
