--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -27,7 +27,7 @@
         <div class="col s12 m4 l4">
             <div class="card white colorMain-text">
                 <div class="card-content center-align colorMain">
-                    <span class="card-content title white-text">{{'profileMainPage.tabs.account' | translate }}</span>
+                    <span class="card-content title white-text" translate="profileMainPage.tabs.account"></span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
